--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -119,6 +119,7 @@ a {
     color: #9c1313 !important; }
     a:hover strong {
       color: inherit; }
+/* #f56a6a */
 
 strong, b {
   color: #3d4449;
