--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1257,6 +1257,12 @@ a.image {
     -ms-transform: scale(1.075);
     transform: scale(1.075); }
 
+.image.profile-img {
+  max-width: 300px; /* 프로필 이미지 크기 고정 */
+  width: auto;
+  height: auto;
+}
+
 /* List */
 ol {
   list-style: decimal;
